<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    >

    <Button
        android:id="@+id/start_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_camera"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="57dp" />

    <Button
        android:id="@+id/speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speed_view"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/start_camera"
        android:layout_marginBottom="12dp" />

    <Button
        android:id="@+id/send_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_text"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/speed"
        android:layout_marginBottom="12dp"
        android:onClick="sendJsonSpeed"
        />
    
    <CheckBox
        android:id="@+id/checkbox_thirty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thirty"
        android:onClick="onCheckboxClicked"
        />

    <CheckBox
        android:id="@+id/checkbox_forty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forty"
        android:onClick="onCheckboxClicked"
        android:layout_marginTop="12dp"
        android:layout_below="@id/checkbox_thirty"
        />

    <CheckBox
        android:id="@+id/checkbox_fifty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/checkbox_forty"
        android:layout_marginTop="12dp"
        android:text="@string/fifty"
        android:onClick="onCheckboxClicked"
        />

    <CheckBox
        android:id="@+id/checkbox_sixty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/checkbox_fifty"
        android:layout_marginTop="12dp"
        android:text="@string/sixty"
        android:onClick="onCheckboxClicked"
        />

    <CheckBox
        android:id="@+id/checkbox_one_twenty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/checkbox_sixty"
        android:layout_marginTop="12dp"
        android:text="@string/one_twenty"
        android:onClick="onCheckboxClicked"
        />

</RelativeLayout>
<!--
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.test.signdetect.MainActivity">

<Button
   android:id="@+id/start_camera"
   android:layout_height="wrap_content"
   android:layout_width="wrap_content"
   android:text="@string/self_destruct"
   app:layout_constraintBottom_toBottomOf="parent"
   android:layout_marginBottom="8dp"
   android:layout_marginRight="8dp"
   app:layout_constraintRight_toRightOf="parent"
   android:layout_marginLeft="8dp"
   app:layout_constraintLeft_toLeftOf="parent" />

<CheckBox android:id="@+id/checkbox_forty"

   android:text="@string/forty"
   android:onClick="onCheckboxClicked"
   android:layout_width="116dp"
   android:layout_height="33dp"
   android:layout_marginTop="8dp"
   android:layout_marginLeft="8dp"
   app:layout_constraintLeft_toLeftOf="parent"
   android:layout_marginRight="8dp"
   app:layout_constraintRight_toRightOf="parent"
   app:layout_constraintHorizontal_bias="0.069"
   app:layout_constraintTop_toTopOf="parent" />

<CheckBox
   android:id="@+id/check_fifty"
   android:layout_width="118dp"
   android:layout_height="27dp"
   android:text="@string/fifty"
   android:layout_marginTop="8dp"
   app:layout_constraintTop_toBottomOf="@+id/checkbox_forty"
   android:onClick="onCheckboxClicked"
   app:layout_constraintBottom_toBottomOf="parent"
   android:layout_marginBottom="8dp"
   android:layout_marginRight="8dp"
   app:layout_constraintRight_toRightOf="parent"
   app:layout_constraintVertical_bias="0.0"
   android:layout_marginLeft="8dp"
   app:layout_constraintLeft_toLeftOf="parent"
   app:layout_constraintHorizontal_bias="0.072" />

<CheckBox
   android:id="@+id/check_onetwety"
   android:layout_width="131dp"
   android:layout_height="35dp"
   android:text="@string/one_twenty"
   android:onClick="onCheckboxClicked"
   android:layout_marginTop="8dp"
   app:layout_constraintTop_toBottomOf="@+id/check_fifty"
   app:layout_constraintBottom_toBottomOf="parent"
   android:layout_marginBottom="8dp"
   android:layout_marginRight="8dp"
   app:layout_constraintRight_toRightOf="parent"
   android:layout_marginLeft="8dp"
   app:layout_constraintLeft_toLeftOf="parent"
   app:layout_constraintHorizontal_bias="0.075"
   app:layout_constraintVertical_bias="0.0" />



<org.opencv.android.JavaCameraView
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
   android:id="@+id/java_camera_view"
   />

   -->

<!--
</android.support.constraint.ConstraintLayout>

-->